[gd_scene load_steps=2 format=3 uid="uid://ui_scene"]

[ext_resource type="Script" path="res://Scripts/UIManager.gd" id="1"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1")

[node name="HopeBar" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 40.0
value = 0.0

[node name="HopeLabel" type="Label" parent="HopeBar"]
offset_left = 5.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 0.0
text = "希望值"

[node name="AnxietyBar" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 50.0
offset_right = 220.0
offset_bottom = 70.0
value = 0.0

[node name="AnxietyLabel" type="Label" parent="AnxietyBar"]
offset_left = 5.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 0.0
text = "焦虑值"

[node name="ControlBar" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 80.0
offset_right = 220.0
offset_bottom = 100.0
value = 0.0

[node name="ControlLabel" type="Label" parent="ControlBar"]
offset_left = 5.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 0.0
text = "控制力"

[node name="StateLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 110.0
offset_right = 220.0
offset_bottom = 130.0
text = "当前状态: ORDER"

[node name="PauseMenu" type="Control" parent="."]
offset_left = 0.0
offset_top = 0.0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2

[node name="Background" type="ColorRect" parent="PauseMenu"]
offset_left = 0.0
offset_top = 0.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.7)

[node name="Title" type="Label" parent="PauseMenu"]
offset_left = 540.0
offset_top = 200.0
offset_right = 740.0
offset_bottom = 260.0
theme_type_variation = &"HeaderLarge"
text = "游戏暂停"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu"]
offset_left = 590.0
offset_top = 300.0
offset_right = 690.0
offset_bottom = 340.0
text = "继续游戏"

[node name="QuitButton" type="Button" parent="PauseMenu"]
offset_left = 590.0
offset_top = 360.0
offset_right = 690.0
offset_bottom = 400.0
text = "退出游戏"

[connection signal="pressed" from="PauseMenu/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/QuitButton" to="." method="_on_quit_button_pressed"]
